src/tests/krate/publish/snapshots/all__krate__publish__dependencies__empty_dependency_name.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "dependency name cannot be empty"
    }
  ]
}
