src/tests/krate/publish/snapshots/all__krate__publish__dependencies__invalid_dependency_name_contains_unicode_chars.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "invalid character `🦀` in dependency name: `foo-🦀-bar`, characters must be an ASCII alphanumeric characters, `-`, or `_`"
    }
  ]
}
