src/tests/krate/publish/snapshots/all__krate__publish__dependencies__invalid_dependency_name_starts_with_digit.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "the name `1-foo` cannot be used as a dependency name, the name cannot start with a digit"
    }
  ]
}
