src/tests/krate/publish/snapshots/all__krate__publish__dependencies__invalid_feature_name.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "\"🍺\" is an invalid feature name"
    }
  ]
}
