src/tests/krate/publish/snapshots/all__krate__publish__dependencies__invalid_too_long_dependency_name.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "the dependency name `fffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff` is too long (max 64 characters)"
    }
  ]
}
