src/tests/krate/publish/snapshots/all__krate__publish__dependencies__new_krate_dependency_missing.snap
---
source: src/tests/krate/publish/dependencies.rs
expression: response.into_json()
---
{
  "errors": [
    {
      "detail": "no known crate named `bar_missing`"
    }
  ]
}
